@@ -14,6 +14,7 @@
 * Improved performance of the EventManager's active events list
 * Added system settings to allow Site Analytics code to be added into the HTML of all pages
 * Fixed bug where deleting a user linked to an email event handler would break the event handler
+* Adding support for HTML5 Audio to play Alarm sounds on all pages
 
 *Version 2.7.2*
 * Fixed bug where uploading point values was being reject as a security breach
